--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
 	<!-- Start Main/Card -->
 	<main>
-		<marquee behavior="scroll" scrollamount="6">Rookie Store Saat ini masih dalam tahap alpha, Jika anda ingin order/membeli bisa langsung menghubungi kontak yang tercantum di bagian paling bawah halaman ini.</marquee>
+		<marquee behavior="scroll" scrollamount="6">contact 0813-1680-7581, Jika anda ingin order/membeli bisa langsung menghubungi kontak yang tercantum di bagian paling bawah halaman ini.</marquee>
 		<div class="card">
 			<div class="card-sizer">
 				<img src="img/card/freefire.jpg" alt="Free Free" width="180px" height="180px">
