--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 				<h2>Hubungi Kami!</h2>
 				<ul>
 					<li>
-						<a href="https://wa.me/6281316807581?text=Halo,%20Riffxic%20Store!" target="_blank">
+						<a href="https://wa.me/6283116807581!" target="_blank">
 							<i class="i-whatsapp svg-icon"></i> +62 813 1680 7581
 						</a>
 					</li>
